--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>d.ANCE</title>
+	<title>dhh Design</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>d.ANCE</h1>
-		<p>This is the dance school of DHH</p>
+		<h1>dhh Design</h1>
+		<p>Design Portfolio</p>
 	</body>
 </html>
