--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
+
 <html>
+
 	<head>
-	<title>dhh Design Portfolio</title>
-	<link rel=“stylesheet” type=“text/css” href=“css/main.css”>
+		<title>dhh Design Portfolio</title>
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
+
 	<body>
-			<h1>dhh Design</h1>
+		
+		<div class="content">
+
+			<div id="image">
+			<img src="images/dhhDesign_Logo.gif">
+			</div>
+		
+			<h1>Design Inside the Box</h1>
+
+			<h3>Specializing in creative design solutions<br/>within established brand guidelines:</h3>
 			
-			<p id="slogan">Design Inside the Box</p>
-			
-			<p>Specializing in creative design solutions within established brand guidelines:</p>
-			
-			<ul>
-				<li>Brochures & Flyers</li>
-				<li>Ads</li>
-				<li>Presentations</li>
-				<li>Newsletters</li>
-				<li>And more!</li>
-			</ul>
-			
-			<p>Contact me at 
-				<a href="mailto:dhhdesign@yahoo.com">dhhdesign@yahoo.com</a>
+			<p id="text">
+			Brochures & Flyers<br/>
+			Ads<br/>
+			Presentations<br/>
+			Newsletters<br/>
+			And more!</p>
+		
+			<p id="footer">
+			Contact me at <br/>
+			<a href="mailto:dhhdesign@yahoo.com">dhhdesign@yahoo.com</a>
 			</p>
 
+		</div>
+
 	</body>
+
 </html>
