Updating Slogan ID

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -15,7 +15,7 @@
 			<img src="images/dhhDesign_Logo.gif">
 			</div>
 		
-			<h1>Design Inside the Box</h1>
+			<h1 id="slogan">Design Inside the Box</h1>
 
 			<h3>Specializing in creative design solutions<br/>within established brand guidelines:</h3>
 			
