Updating CSS/HTML for Unit 3 Homework

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -12,19 +12,21 @@
 		<div class="content">
 
 			<div id="image">
-			<img src="images/dhhDesign_Logo.gif">
+			<img src="images/dhhDesign_Logo.gif" alt="dhh Design Logo" title="dhh Design Logo">
 			</div>
 		
-			<h1 id="slogan">Design Inside the Box</h1>
+			<p id="slogan">Design Inside the Box</p>
 
 			<h3>Specializing in creative design solutions<br/>within established brand guidelines:</h3>
-			
-			<p id="text">
-			Brochures & Flyers<br/>
-			Ads<br/>
-			Presentations<br/>
-			Newsletters<br/>
-			And more!</p>
+		
+			<p id="list">
+				Brochures & Flyers<br/>
+				Ads<br/>
+				Presentations<br/>
+				Newsletters<br/>
+				and more!<br/>
+			</p>
+			<!-- I tried doing an unordered list, making bullets invisible, and then centering, however the list was slightly offset from the rest of the centered text, so I opted for this solution instead. -->
 		
 			<p id="footer">
 			Contact me at <br/>
