--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,6 +5,7 @@
 	<head>
 		<title>dhh Design Portfolio</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" href="https://use.typekit.net/vff0hnf.css">
 	</head>
 
 	<body>
@@ -15,7 +16,7 @@
 			<img src="images/dhhDesign_Logo.gif" alt="dhh Design Logo" title="dhh Design Logo">
 			</div>
 		
-			<p id="slogan">Design Inside the Box</p>
+			<h1>DESIGN INSIDE THE BOX</h1>
 
 			<h3>Specializing in creative design solutions<br/>within established brand guidelines:</h3>
 		
@@ -28,7 +29,7 @@
 			</p>
 			<!-- I tried doing an unordered list, making bullets invisible, and then centering, however the list was slightly offset from the rest of the centered text, so I opted for this solution instead. -->
 		
-			<p id="footer">
+			<p>
 			Contact me at <br/>
 			<a href="mailto:dhhdesign@yahoo.com">dhhdesign@yahoo.com</a>
 			</p>
