--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -8,7 +8,9 @@
 <body> 
 	<table cellspacing="0" align="center" style= "width: 600px; padding:0px;" border="0">
 		<tr>
-			<td style="text-align:center; padding:20px; background: #0f368c;" colspan=2">logo</td>
+			<td style="text-align:center; padding:20px; background: #0f368c;" colspan=2">
+			<img src="https://deronhh.github.io/unit_10/logo.png">
+			</td>
 		</tr>
 		<tr>
 			<td style="text-align:center; padding:10px; background: #ca1614; color: white;" colspan=2">
@@ -16,13 +18,15 @@
 			</td>
 		</tr>
 		<tr>
-			<td style="text-align:center;" colspan=2">image</td>
+			<td style="text-align:center; padding:30px;" colspan=2">
+			<img src="https://deronhh.github.io/unit_10/captmarvel.jpg">
+			</td>
 		</tr>
 		<tr>
-			<td style="width:50%; text-align:right; vertical-align:top; padding:0px 20px;">
+			<td style="width:50%; text-align:right; vertical-align:top; padding:0px 30px 30px 0px;">
 				<p><span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 50px; font-weight: bold; color: #0f368c;">Captain Marvel</span></p>
 			</td>
-			<td style="width:50%; text-align:left; vertical-align:top;padding:10px 20px;">
+			<td style="width:50%; text-align:left; vertical-align:top; padding:0px 20px 20px 0px;">
 				<span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 14px; color: black;">
 				<p><b>Genre</b><br/>
 				Science Fiction</p>
