--- a/unit_10/email.html
+++ b/unit_10/email.html
@@ -3,13 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <title>Cinerama Newsletter</title>
+	<style type="text/css">
+		@media only screen and (max-width: 480px) {
+			#main-table {
+				background-color: black;
+			}
+		}
+		
+	</style>
 </head>
 
 <body> 
-	<table cellspacing="0" align="center" style= "width: 600px; padding:0px;" border="0">
-		<tr>
+	<table cellspacing="0" align="center" style= "width: 600px; padding:0px;" border="0" id="main-table">
+		<tr id="logo">
 			<td style="text-align:center; padding:20px; background: #0f368c;" colspan=2">
-			<img src="https://deronhh.github.io/unit_10/logo.png">
+			<img src="https://deronhh.github.io/unit_10/logo.png" alt="Cinerama Logo" title="Cinerama Logo">
 			</td>
 		</tr>
 		<tr>
@@ -17,14 +25,14 @@
 				<span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 16px; letter-spacing: .5em; font-weight: bold;">NOW SHOWING</span>
 			</td>
 		</tr>
-		<tr>
+		<tr id="image">
 			<td style="text-align:center; padding:30px;" colspan=2">
-			<img src="https://deronhh.github.io/unit_10/captmarvel.jpg">
+			<img src="https://deronhh.github.io/unit_10/captmarvel.jpg" alt="Captain Marvel Image" title="Captain Marvel Image">
 			</td>
 		</tr>
-		<tr>
+		<tr id=>
 			<td style="width:50%; text-align:right; vertical-align:top; padding:0px 30px 30px 0px;">
-				<p><span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 50px; font-weight: bold; color: #0f368c;">Captain Marvel</span></p>
+				<<span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 50px; font-weight: bold; color: #0f368c;">Captain Marvel</span></p>
 			</td>
 			<td style="width:50%; text-align:left; vertical-align:top; padding:0px 20px 20px 0px;">
 				<span style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, 'sans-serif'; font-size: 14px; color: black;">
